# DITD

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _tmp_initflag_hits.txt  _tmp_kos_header_paths.txt  dc-compile.cmake  dreamcast.cmake
.github/workflows/: cmake-multi-platform.yml
Fitd/: CMakeLists.txt  fitd.cpp  fitd_dc.cpp
FitdLib/: AITD1.cpp  AITD1.h  AITD1_Tatou.cpp  AITD2.cpp  AITD2.h  AITD3.cpp  AITD3.h  CMakeLists.txt  JACK.cpp  JACK.h  actorList.cpp  actorList.h  aitdBox.cpp  aitdBox.h  anim.cpp  anim.h  anim2d.cpp  anim2d.h  animAction.cpp  animAction.h  baseTypes.h  bgfxGlue.cpp  bgfxGlue.h  common.h  config.h  cosTable.cpp  cosTable.h  dc_fastmath.h  dc_fastmem.h  dc_splash.cpp  dc_splash.h  dc_stdio_shim.cpp  dc_stdio_shim.h  debugFont.cpp  debugFont.h  debugger.cpp  debugger.h  endianess.h  evalVar.cpp  evalVar.h  (+83 more)
FitdLib/System/: dc_music.cc  dc_music.h  dc_palette.h  dc_timing.h  i_ctrl_dc.cc  i_sound_dc.cc  i_sound_dc.h  i_video_dc.cc  i_video_dc.h  r_clipping.cc  r_clipping.h  r_units.h  (+3 more)
epi/: arrays.cc  epi_dreamcast.cc  epi_dreamcast.h  exe_path.cc  file.cc  file_memory.cc  filesystem.cc  image_data.cc  image_data.h  image_hq2x.cc  image_hq2x.h  image_jpeg.cc  image_jpeg.h  image_png.cc  image_png.h  image_tga.cc  image_tga.h  macros.h  math_angle.h  math_color.h  memshim.h  stb_image.cc  stb_image.h  stb_image_write.cc  str_format.cc  utility.cc
libSH4simd/: README  audio.h  gldc_pipeline.h  libsh4simd.h  matrix.h  matrix_kernels.h  simd_array.h  tarray.h  tuple.h  vertex_dc.h
tools/: AITD1_CD_pak_DB.json  AITD1_floppy_pak_DB.json
(+4 files in other folders)
